--- a/BanThing/app/src/main/res/values/strings.xml
+++ b/BanThing/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BanThing</string>
+    <string name="facebook_app_id">1035314409928293</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_scrolling">ScrollingActivity</string>
     <string name="large_text">
